changes to results page with algorithm

--- a/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/Views/Patients/Results.cshtml
+++ b/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/Views/Patients/Results.cshtml
@@ -208,326 +208,377 @@
             Results:
         </h4>
         We recommend the following treatments:
-        <dl class="dl-horizontal">
-            @Html.DisplayFor(i => i.comparisonResults)
-            <br />
-            <dt></dt>
-            @*Data is based on a statistical correlation with: Patient @target.patientID | @targetSimilarity | @targetEffect*@
-            <hr />
-            <dt>
-                Patient  Info
-            </dt>
-            <dd>
-                ------------------------------
-            </dd>
-            <dt>
-                @Html.DisplayNameFor(model => model.Sex)
-            </dt>
 
-            <dd>
-                @Html.DisplayFor(model => model.Sex)
-            </dd>
+		<dl class="dl-horizontal">
+			@*@Html.DisplayFor(i => i.comparisonResults)*@
+				@foreach (TreatmentsPivot sp in target.TreatmentsPivots)
+		{
+			@Html.DisplayFor(spitem => sp.PossibleTreatment.Name)
+	if (sp.date != null)
+	{
+		<tag> // </tag>
+		@Html.DisplayNameFor(spitem => sp.date)
+		<tag>: </tag>
+		@Html.DisplayFor(spitem => sp.date)
+}
+if (sp.frequency != null)
+{
+		<tag> // </tag>
+		@Html.DisplayNameFor(spitem => sp.frequency)
+		<tag>: </tag>
+		@Html.DisplayFor(spitem => sp.frequency)
+}
+if (sp.notes != null)
+{
+		<tag> // </tag>
+		@Html.DisplayNameFor(spitem => sp.notes)
+		<tag>: </tag>
+		@Html.DisplayFor(spitem => sp.notes)
+}
+if (sp.effectiveness != null)
+{
+		<tag> // </tag>
+		@Html.DisplayNameFor(spitem => sp.effectiveness)
+		<tag>: </tag>
+		@Html.DisplayFor(spitem => sp.effectiveness)
+}
 
-            <dt>
-                @Html.DisplayNameFor(model => model.Married)
-            </dt>
+		<br />
+}
+				<br />
+			</dd>
 
-            <dd>
-                @Html.DisplayFor(model => model.Married)
-            </dd>
 
-            <dt>
-                @Html.DisplayNameFor(model => model.Age)
-            </dt>
 
-            <dd>
-                @Html.DisplayFor(model => model.Age)
-            </dd>
 
-            <dt>
-                Classification
-            </dt>
 
-            <dd>
-                @Html.DisplayFor(model => model.HistologicalClassification)
-            </dd>
 
-            <dt>
-                Grade (WHO)
-            </dt>
 
-            <dd>
-                @Html.DisplayFor(model => model.HistologicalGrade)
-            </dd>
 
-            <dt>
-                Tumor Size (WxHxL)
-            </dt>
 
-            <dd>
-                @Html.DisplayFor(model => model.TumorWidth)
-                x
-                @Html.DisplayFor(model => model.TumorHeight)
-                x
-                @Html.DisplayFor(model => model.TumorLength)
-            </dd>
 
-            @*<dt>
-                    @Html.DisplayNameFor(model => model.TumorHeight)
-                </dt>
 
-                <dd>
-                    @Html.DisplayFor(model => model.TumorHeight)
-                </dd>
 
-                <dt>
-                    @Html.DisplayNameFor(model => model.TumorLength)
-                </dt>
 
-                <dd>
-                    @Html.DisplayFor(model => model.TumorLength)
-                </dd>*@
 
-            <dt>
-                Location
-            </dt>
+			<br /
+			<dt></dt>
+			@*Data is based on a statistical correlation with: Patient @target.patientID | @targetSimilarity | @targetEffect*@
+			<hr />
+			<dt>
+				Patient  Info
+			</dt>
+			<dd>
+				------------------------------
+			</dd>
+			<dt>
+				@Html.DisplayNameFor(model => model.Sex)
+			</dt>
 
-            <dd>
-                @Html.DisplayFor(model => model.TumorLocation)
-            </dd>
+			<dd>
+				@Html.DisplayFor(model => model.Sex)
+			</dd>
 
-            <dt>
-                <br />------------------------------ <br />
-                <br />Review of Systems<br />
+			<dt>
+				@Html.DisplayNameFor(model => model.Married)
+			</dt>
 
-                @Html.DisplayNameFor(model => model.Constitutional)
-            </dt>
+			<dd>
+				@Html.DisplayFor(model => model.Married)
+			</dd>
 
-            <dd>
-                
-                @Html.DisplayFor(model => model.Constitutional)
-            </dd>
+			<dt>
+				@Html.DisplayNameFor(model => model.Age)
+			</dt>
 
-            <dt>
-                @Html.DisplayNameFor(model => model.Respiratory)
-            </dt>
+			<dd>
+				@Html.DisplayFor(model => model.Age)
+			</dd>
 
-            <dd>
-                @Html.DisplayFor(model => model.Respiratory)
-            </dd>
+			<dt>
+				Classification
+			</dt>
 
-            <dt>
-                @Html.DisplayNameFor(model => model.Cardiovascular)
-            </dt>
+			<dd>
+				@Html.DisplayFor(model => model.HistologicalClassification)
+			</dd>
 
-            <dd>
-                @Html.DisplayFor(model => model.Cardiovascular)
-            </dd>
+			<dt>
+				Grade (WHO)
+			</dt>
 
-            <dt>
-                @Html.DisplayNameFor(model => model.Gastrointestinal)
-            </dt>
+			<dd>
+				@Html.DisplayFor(model => model.HistologicalGrade)
+			</dd>
 
-            <dd>
-                @Html.DisplayFor(model => model.Gastrointestinal)
-            </dd>
+			<dt>
+				Tumor Size (WxHxL)
+			</dt>
 
-            <dt>
-                @Html.DisplayNameFor(model => model.Musculoskeletal)
-            </dt>
+			<dd>
+				@Html.DisplayFor(model => model.TumorWidth)
+				x
+				@Html.DisplayFor(model => model.TumorHeight)
+				x
+				@Html.DisplayFor(model => model.TumorLength)
+			</dd>
 
-            <dd>
-                @Html.DisplayFor(model => model.Musculoskeletal)
-            </dd>
+			@*<dt>
+			@Html.DisplayNameFor(model => model.TumorHeight)
+		</dt>
 
-            <dt>
-                @Html.DisplayNameFor(model => model.Integumentary)
-            </dt>
+		<dd>
+			@Html.DisplayFor(model => model.TumorHeight)
+		</dd>
 
-            <dd>
-                @Html.DisplayFor(model => model.Integumentary)
-            </dd>
+		<dt>
+			@Html.DisplayNameFor(model => model.TumorLength)
+		</dt>
 
-            <dt>
-                @Html.DisplayNameFor(model => model.Neurologic)
-            </dt>
+		<dd>
+			@Html.DisplayFor(model => model.TumorLength)
+		</dd>*@
 
-            <dd>
-                @Html.DisplayFor(model => model.Neurologic)
-            </dd>
+			<dt>
+				Location
+			</dt>
 
-            <dt>
-                Exercise
-            </dt>
+			<dd>
+				@Html.DisplayFor(model => model.TumorLocation)
+			</dd>
 
-            <dd>
-                @Html.DisplayFor(model => model.Exercize)
-            </dd>
+			<dt>
+				<br />------------------------------ <br />
+				<br />Review of Systems<br />
 
-            <dt>
-                @Html.DisplayNameFor(model => model.Diet)
-            </dt>
+				@Html.DisplayNameFor(model => model.Constitutional)
+			</dt>
 
-            <dd>
-                @Html.DisplayFor(model => model.Diet)
-            </dd>
+			<dd>
 
-            <dt>
-                <br />
-                Symptoms
-            </dt>
+				@Html.DisplayFor(model => model.Constitutional)
+			</dd>
 
-            <dd>
-                <br />
-                @foreach (SymptomsPivot sp in Model.SymptomsPivots)
-                {
-                    @Html.DisplayFor(spitem => sp.PossibleSymptom.Name)
+			<dt>
+				@Html.DisplayNameFor(model => model.Respiratory)
+			</dt>
 
-                    if (sp.date != null)
-                    {
-                        <tag> // </tag>
-                        @Html.DisplayNameFor(spitem => sp.date)
-                        <tag>: </tag>
-                        @Html.DisplayFor(spitem => sp.date)
-                    }
-                    if (sp.frequency != null)
-                    {
-                        <tag> // </tag>
-                        @Html.DisplayNameFor(spitem => sp.frequency)
-                        <tag>: </tag>
-                        @Html.DisplayFor(spitem => sp.frequency)
-                    }
-                    if (sp.notes != null)
-                    {
-                        <tag> // </tag>
-                        @Html.DisplayNameFor(spitem => sp.notes)
-                        <tag>: </tag>
-                        @Html.DisplayFor(spitem => sp.notes)
-                    }
+			<dd>
+				@Html.DisplayFor(model => model.Respiratory)
+			</dd>
 
-                    <br />
-                }
-                <br />
-            </dd>
+			<dt>
+				@Html.DisplayNameFor(model => model.Cardiovascular)
+			</dt>
 
-            <dt>
-                <br />
-                Other Medications
-            </dt>
+			<dd>
+				@Html.DisplayFor(model => model.Cardiovascular)
+			</dd>
 
-            <dd>
-                <br />
-                @foreach (OtherMedsPivot sp in Model.OtherMedsPivots)
-                {
-                    @Html.DisplayFor(spitem => sp.PossibleOtherMed.Name)
+			<dt>
+				@Html.DisplayNameFor(model => model.Gastrointestinal)
+			</dt>
 
-                    if (sp.date != null)
-                    {
-                        <tag> // </tag>
-                        @Html.DisplayNameFor(spitem => sp.date)
-                        <tag>: </tag>
-                        @Html.DisplayFor(spitem => sp.date)
-                    }
-                    if (sp.frequency != null)
-                    {
-                        <tag> // </tag>
-                        @Html.DisplayNameFor(spitem => sp.frequency)
-                        <tag>: </tag>
-                        @Html.DisplayFor(spitem => sp.frequency)
-                    }
-                    if (sp.notes != null)
-                    {
-                        <tag> // </tag>
-                        @Html.DisplayNameFor(spitem => sp.notes)
-                        <tag>: </tag>
-                        @Html.DisplayFor(spitem => sp.notes)
-                    }
-                    <br />
-                }
-                <br />
-            </dd>
+			<dd>
+				@Html.DisplayFor(model => model.Gastrointestinal)
+			</dd>
 
-            <dt>
-                <br />
-                Health Factors
-            </dt>
+			<dt>
+				@Html.DisplayNameFor(model => model.Musculoskeletal)
+			</dt>
 
-            <dd>
-                <br />
-                @foreach (HealthFactorsPivot sp in Model.HealthFactorsPivots)
-                {
-                    @Html.DisplayFor(spitem => sp.PossibleHealthFactor.Name)
-                    if (sp.date != null)
-                    {
-                        <tag> // </tag>
-                        @Html.DisplayNameFor(spitem => sp.date)
-                        <tag>: </tag>
-                        @Html.DisplayFor(spitem => sp.date)
-                    }
-                    if (sp.frequency != null)
-                    {
-                        <tag> // </tag>
-                        @Html.DisplayNameFor(spitem => sp.frequency)
-                        <tag>: </tag>
-                        @Html.DisplayFor(spitem => sp.frequency)
-                    }
-                    if (sp.notes != null)
-                    {
-                        <tag> // </tag>
-                        @Html.DisplayNameFor(spitem => sp.notes)
-                        <tag>: </tag>
-                        @Html.DisplayFor(spitem => sp.notes)
-                    }
-                    <br />
-                }
-                <br />
-            </dd>
+			<dd>
+				@Html.DisplayFor(model => model.Musculoskeletal)
+			</dd>
 
-            <dt>
-                <br />
-                Treatments Given
-            </dt>
+			<dt>
+				@Html.DisplayNameFor(model => model.Integumentary)
+			</dt>
 
-            <dd>
-                <br />
-                @foreach (TreatmentsPivot sp in Model.TreatmentsPivots)
-                {
-                    @Html.DisplayFor(spitem => sp.PossibleTreatment.Name)
-                    if (sp.date != null)
-                    {
-                        <tag> // </tag>
-                        @Html.DisplayNameFor(spitem => sp.date)
-                        <tag>: </tag>
-                        @Html.DisplayFor(spitem => sp.date)
-                    }
-                    if (sp.frequency != null)
-                    {
-                        <tag> // </tag>
-                        @Html.DisplayNameFor(spitem => sp.frequency)
-                        <tag>: </tag>
-                        @Html.DisplayFor(spitem => sp.frequency)
-                    }
-                    if (sp.notes != null)
-                    {
-                        <tag> // </tag>
-                        @Html.DisplayNameFor(spitem => sp.notes)
-                        <tag>: </tag>
-                        @Html.DisplayFor(spitem => sp.notes)
-                    }
-                    if (sp.effectiveness != null)
-                    {
-                        <tag> // </tag>
-                        @Html.DisplayNameFor(spitem => sp.effectiveness)
-                        <tag>: </tag>
-                        @Html.DisplayFor(spitem => sp.effectiveness)
-                    }
+			<dd>
+				@Html.DisplayFor(model => model.Integumentary)
+			</dd>
 
-                    <br />
-                }
-                <br />
-            </dd>
+			<dt>
+				@Html.DisplayNameFor(model => model.Neurologic)
+			</dt>
 
-        </dl>
+			<dd>
+				@Html.DisplayFor(model => model.Neurologic)
+			</dd>
+
+			<dt>
+				Exercise
+			</dt>
+
+			<dd>
+				@Html.DisplayFor(model => model.Exercize)
+			</dd>
+
+			<dt>
+				@Html.DisplayNameFor(model => model.Diet)
+			</dt>
+
+			<dd>
+				@Html.DisplayFor(model => model.Diet)
+			</dd>
+
+			<dt>
+				<br />
+				Symptoms
+			</dt>
+
+			<dd>
+				<br />
+				@foreach (SymptomsPivot sp in Model.SymptomsPivots)
+		{
+			@Html.DisplayFor(spitem => sp.PossibleSymptom.Name)
+
+	if (sp.date != null)
+	{
+		<tag> // </tag>
+		@Html.DisplayNameFor(spitem => sp.date)
+		<tag>: </tag>
+		@Html.DisplayFor(spitem => sp.date)
+}
+if (sp.frequency != null)
+{
+		<tag> // </tag>
+		@Html.DisplayNameFor(spitem => sp.frequency)
+		<tag>: </tag>
+		@Html.DisplayFor(spitem => sp.frequency)
+}
+if (sp.notes != null)
+{
+		<tag> // </tag>
+		@Html.DisplayNameFor(spitem => sp.notes)
+		<tag>: </tag>
+		@Html.DisplayFor(spitem => sp.notes)
+}
+
+		<br />
+}
+				<br />
+			</dd>
+
+			<dt>
+				<br />
+				Other Medications
+			</dt>
+
+			<dd>
+				<br />
+				@foreach (OtherMedsPivot sp in Model.OtherMedsPivots)
+		{
+			@Html.DisplayFor(spitem => sp.PossibleOtherMed.Name)
+
+	if (sp.date != null)
+	{
+		<tag> // </tag>
+		@Html.DisplayNameFor(spitem => sp.date)
+		<tag>: </tag>
+		@Html.DisplayFor(spitem => sp.date)
+}
+if (sp.frequency != null)
+{
+		<tag> // </tag>
+		@Html.DisplayNameFor(spitem => sp.frequency)
+		<tag>: </tag>
+		@Html.DisplayFor(spitem => sp.frequency)
+}
+if (sp.notes != null)
+{
+		<tag> // </tag>
+		@Html.DisplayNameFor(spitem => sp.notes)
+		<tag>: </tag>
+		@Html.DisplayFor(spitem => sp.notes)
+}
+		<br />
+}
+				<br />
+			</dd>
+
+			<dt>
+				<br />
+				Health Factors
+			</dt>
+
+			<dd>
+				<br />
+				@foreach (HealthFactorsPivot sp in Model.HealthFactorsPivots)
+		{
+			@Html.DisplayFor(spitem => sp.PossibleHealthFactor.Name)
+	if (sp.date != null)
+	{
+		<tag> // </tag>
+		@Html.DisplayNameFor(spitem => sp.date)
+		<tag>: </tag>
+		@Html.DisplayFor(spitem => sp.date)
+}
+if (sp.frequency != null)
+{
+		<tag> // </tag>
+		@Html.DisplayNameFor(spitem => sp.frequency)
+		<tag>: </tag>
+		@Html.DisplayFor(spitem => sp.frequency)
+}
+if (sp.notes != null)
+{
+		<tag> // </tag>
+		@Html.DisplayNameFor(spitem => sp.notes)
+		<tag>: </tag>
+		@Html.DisplayFor(spitem => sp.notes)
+}
+		<br />
+}
+				<br />
+			</dd>
+
+			<dt>
+				<br />
+				Treatments Given
+			</dt>
+
+			<dd>
+				<br />
+				@foreach (TreatmentsPivot sp in Model.TreatmentsPivots)
+		{
+			@Html.DisplayFor(spitem => sp.PossibleTreatment.Name)
+	if (sp.date != null)
+	{
+		<tag> // </tag>
+		@Html.DisplayNameFor(spitem => sp.date)
+		<tag>: </tag>
+		@Html.DisplayFor(spitem => sp.date)
+}
+if (sp.frequency != null)
+{
+		<tag> // </tag>
+		@Html.DisplayNameFor(spitem => sp.frequency)
+		<tag>: </tag>
+		@Html.DisplayFor(spitem => sp.frequency)
+}
+if (sp.notes != null)
+{
+		<tag> // </tag>
+		@Html.DisplayNameFor(spitem => sp.notes)
+		<tag>: </tag>
+		@Html.DisplayFor(spitem => sp.notes)
+}
+if (sp.effectiveness != null)
+{
+		<tag> // </tag>
+		@Html.DisplayNameFor(spitem => sp.effectiveness)
+		<tag>: </tag>
+		@Html.DisplayFor(spitem => sp.effectiveness)
+}
+
+		<br />
+}
+				<br />
+			</dd>
+
+		</dl>
     </div>
 
 
