--- a/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/Views/Patients/Results.cshtml
+++ b/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/Views/Patients/Results.cshtml
@@ -1,194 +1,4 @@
-﻿@*@model Tuple<TumorTaskforce_Webapp_1.Patient, IEnumerable<TumorTaskforce_Webapp_1.Patient>>
-
-@{
-    ViewBag.Title = "Results";
-
-    Patient target = new Patient();
-    int targetSimilarity = 0;
-    int currEffect = 0, targetEffect = 0;
-    String targetRecord = "000000000000000000";
-
-    foreach (var curr in Model.Item2)
-    {
-        int similarity = 0, i = 0;
-        String record = "000000000000000000";
-        if (Model.patientID == curr.patientID)
-        {
-            continue;
-        }
-        else
-        {
-            @*double tVol = 0, currVol = 0;
-                tVol = (double)(Model.TumorHeight * Model.TumorLength * Model.TumorWidth);
-                currVol = (double)(curr.TumorHeight * curr.TumorLength * curr.TumorWidth);* @
-            if (Model.Sex.Equals(curr.Sex))
-            {
-                similarity++;
-                record = record.Insert(0, "1");
-            }
-            if (Model.Age == curr.Age)
-            {
-                similarity++;
-                record = record.Insert(1, "1");
-            }
-            if (Model.HistologicalClassification.Equals(curr.HistologicalClassification))
-            {
-                i = 3;
-                record = record.Insert(2, "1");
-                if (Model.HistologicalGrade >= curr.HistologicalGrade)
-                {
-                    i++;
-                    record = record.Insert(3, "1");
-                    if (Model.HistologicalGrade == curr.HistologicalGrade)
-                    {
-                        i++;
-                        record = record.Insert(4, "1");
-
-                    }
-                }
-                similarity += i;
-                i = 0;
-            }
-            if (Model.TumorLength == curr.TumorLength)
-            {
-                similarity++;
-                record = record.Insert(5, "1");
-            }
-            if (Model.TumorWidth == curr.TumorWidth)
-            {
-                similarity++;
-                record = record.Insert(6, "1");
-            }
-            if (Model.TumorHeight == curr.TumorHeight)
-            {
-                similarity++;
-                record = record.Insert(7, "1");
-            }
-            if (Model.TumorLocation.Equals(curr.TumorLocation))
-            {
-                similarity += 3;
-                record = record.Insert(8, "1");
-            }
-            try
-            {
-
-                if (!Model.Constitutional.IsEmpty()
-                    & !Model.Constitutional.Equals("normal"))
-                {
-                    if (Model.Constitutional.Equals(curr.Constitutional))
-                    {
-                        similarity++;
-                        record = record.Insert(9, "1");
-                    }
-                }
-                if (!Model.Respiratory.IsEmpty()
-                    & !Model.Respiratory.Equals("normal"))
-                {
-                    if (Model.Respiratory.Equals(curr.Respiratory))
-                    {
-                        similarity++;
-                        record = record.Insert(10, "1");
-                    }
-                }
-                if (!Model.Cardiovascular.IsEmpty()
-                    & !Model.Cardiovascular.Equals("normal"))
-                {
-                    if (Model.Cardiovascular.Equals(curr.Cardiovascular))
-                    {
-                        similarity++;
-                        record = record.Insert(11, "1");
-                    }
-                }
-                if (!Model.Gastrointestinal.IsEmpty()
-                    & !Model.Gastrointestinal.Equals("normal"))
-                {
-                    if (Model.Gastrointestinal.Equals(curr.Gastrointestinal))
-                    {
-                        similarity++;
-                        record = record.Insert(12, "1");
-                    }
-                }
-                if (!Model.Musculoskeletal.IsEmpty()
-                    & !Model.Musculoskeletal.Equals("normal"))
-                {
-                    if (Model.Musculoskeletal.Equals(curr.Musculoskeletal))
-                    {
-                        similarity++;
-                        record = record.Insert(13, "1");
-                    }
-                }
-                if (!Model.Integumentary.IsEmpty()
-                    & !Model.Integumentary.Equals("normal"))
-                {
-                    if (Model.Integumentary.Equals(curr.Integumentary))
-                    {
-                        similarity++;
-                        record = record.Insert(14, "1");
-                    }
-                }
-                if (!Model.Neurologic.IsEmpty()
-                    & !Model.Neurologic.Equals("normal"))
-                {
-                    if (Model.Neurologic.Equals(curr.Neurologic))
-                    {
-                        similarity++;
-                        record = record.Insert(15, "1");
-                    }
-                }
-                if (!Model.Exercize.IsEmpty()
-                    & !Model.Exercize.Equals("normal"))
-                {
-                    if (Model.Exercize.Equals(curr.Exercize))
-                    {
-                        similarity++;
-                        record = record.Insert(16, "1");
-                    }
-                }
-                if (!Model.Diet.IsEmpty()
-                    & !Model.Diet.Equals("normal"))
-                {
-                    if (Model.Diet.Equals(curr.Diet))
-                    {
-                        similarity++;
-                        record = record.Insert(17, "1");
-                    }
-                }
-            }
-            catch (NullReferenceException e) { }
-
-
-        }
-
-        if (similarity > targetSimilarity)
-        {
-            target = curr;
-            targetSimilarity = similarity;
-            targetRecord = record;
-        }
-        else if (similarity == targetSimilarity)
-        {
-            currEffect = 0;
-            targetEffect = 0;
-            foreach (TreatmentsPivot sp in curr.TreatmentsPivots)
-            {
-                currEffect += sp.effectiveness;
-            }
-            foreach (TreatmentsPivot sp in target.TreatmentsPivots)
-            {
-                targetEffect += sp.effectiveness;
-            }
-            if (currEffect > targetEffect)
-            {
-                target = curr;
-                targetRecord = record;
-            }
-        }
-        @*<text> Patient: </text><span>@curr.patientID</span><text> | Sim: </text><span>@similarity</span><text> | Record: </text><span>@record</span><text> | Effect: </text><span>@currEffect</span><br />* @
-
-    }
-}*@
-
-@model TumorTaskforce_Webapp_1.Patient
+﻿@model TumorTaskforce_Webapp_1.Patient
 @using Microsoft.AspNet.Identity
 
 @{
@@ -210,58 +20,8 @@
         We recommend the following treatments:
 
 		<dl class="dl-horizontal">
-			@*@Html.DisplayFor(i => i.comparisonResults)*@
-				@foreach (TreatmentsPivot sp in target.TreatmentsPivots)
-		{
-			@Html.DisplayFor(spitem => sp.PossibleTreatment.Name)
-	if (sp.date != null)
-	{
-		<tag> // </tag>
-		@Html.DisplayNameFor(spitem => sp.date)
-		<tag>: </tag>
-		@Html.DisplayFor(spitem => sp.date)
-}
-if (sp.frequency != null)
-{
-		<tag> // </tag>
-		@Html.DisplayNameFor(spitem => sp.frequency)
-		<tag>: </tag>
-		@Html.DisplayFor(spitem => sp.frequency)
-}
-if (sp.notes != null)
-{
-		<tag> // </tag>
-		@Html.DisplayNameFor(spitem => sp.notes)
-		<tag>: </tag>
-		@Html.DisplayFor(spitem => sp.notes)
-}
-if (sp.effectiveness != null)
-{
-		<tag> // </tag>
-		@Html.DisplayNameFor(spitem => sp.effectiveness)
-		<tag>: </tag>
-		@Html.DisplayFor(spitem => sp.effectiveness)
-}
-
-		<br />
-}
-				<br />
-			</dd>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-			<br /
+		    @Html.DisplayFor(i => i.comparisonResults)
+			<br />
 			<dt></dt>
 			@*Data is based on a statistical correlation with: Patient @target.patientID | @targetSimilarity | @targetEffect*@
 			<hr />
