a few small fixes for beta publish

--- a/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/Views/Patients/Details.cshtml
+++ b/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/Views/Patients/Details.cshtml
@@ -105,9 +105,11 @@
                     </dd>
 
                     <dt>
+                        <br /><br />
+                        Review of Systems<br />
+                        ------------------------------ @Html.ActionLink("(Edit)", "Edit", new { id = Model.patientID })<br /><br />
 
-                        <br />Review of Systems<br />
-                        ------------------------------ @Html.ActionLink("(Edit)", "Edit", new { id = Model.patientID })<br />
+
                         @Html.DisplayNameFor(model => model.Constitutional)
                     </dt>
 
@@ -490,8 +492,9 @@ else
                     </dd>
 
                     <dt>
-                        <br />------------------------------ @Html.ActionLink("(Edit)", "Edit", new { id = Model.patientID })<br />
-                        <br />Review of Systems<br />
+                        <br /><br />
+                        Review of Systems<br />
+                        ------------------------------ @Html.ActionLink("(Edit)", "Edit", new { id = Model.patientID })<br /><br />
 
                         @Html.DisplayNameFor(model => model.Constitutional)
                     </dt>
