--- a/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/Views/Patients/Results.cshtml
+++ b/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/Views/Patients/Results.cshtml
@@ -107,12 +107,13 @@
 				@Html.DisplayFor(model => model.TumorLocation)
 			</dd>
 
-			<dt>
-				<br />------------------------------ <br />
-				<br />Review of Systems<br />
+            <dt>
+                <br /><br />
+                Review of Systems<br />
+                ------------------------------<br /><br />
 
-				@Html.DisplayNameFor(model => model.Constitutional)
-			</dt>
+                @Html.DisplayNameFor(model => model.Constitutional)
+            </dt>
 
 			<dd>
 
