home page design

--- a/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/Views/Home/Index.cshtml
+++ b/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/Views/Home/Index.cshtml
@@ -3,27 +3,49 @@
 }
 
 <div class="jumbotron">
-    <h1>Tumor App </h1>
-    <p class="lead">Use the links above to navigate.</p>
+    <h1>Brain Tumor Application </h1>
+    <p class="lead">Welcome! Use the links above to navigate.</p>
 </div>
 
 <div class="row">
     <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed interdum interdum porttitor. Suspendisse at arcu ut enim tincidunt lobortis et nec dui. Sed in nisl at elit rutrum consectetur. Vestibulum quis urna id mi dapibus cursus nec sed velit. Nunc faucibus auctor accumsan. Nam volutpat sodales venenatis. Donec ut ultricies metus. Nam feugiat ultricies lectus, sed placerat augue faucibus eget.
-        </p>
+        <h2>Desciption</h2>
+		<p>
+			We have compiled a database of existing patients and have created a comparison algorithm to analyze patterns between certain variables involved in each patients condition and the effects on the success rate of a variety of treatments. We have also created a user interface that allows users to login or register to gain access to the database showing them the conclusions of our comparison algorithm, as well as allow them to input information regarding a specific patient and receive both a computative analysis of the patients conditions and a recommended course of action calculated using the database.
+		</p>
     </div>
+	<div class="col-md-4">
+		<h2>Get to Know Us</h2>
+		<p>
+			Team Leader- Laura Glessner
+		</p>
+		<img src="~/Images/me.JPG" alt="Picture of Laura." style="width:120px;height:160px;" />
+		<p>
+			Client Representative- Mabel Jaindl
+		</p>
+		<img src="~/Images/Mabel.JPG" alt="Picture of Mabel." style="width:150px;height:160px;" />
+		<p>
+			Researcher- Burdell Fitzgerald
+		</p>
+		<img src="~/Images/Burdell.JPG" alt="Picture of Burdell." style="width:130px;height:150px;" />
+		<p>
+			Editor- Taylor Clingenpeel
+		</p>
+		<img src="~/Images/Taylor.JPG" alt="Picture of Taylor." style="width:150px;height:160px;" />
+		<p>
+			Tester- Brian Sanders
+		</p>
+		<img src="~/Images/Brian.JPG" alt="Picture of Brian." style="width:150px;height:160px;" />
+
+	</div>
     <div class="col-md-4">
-        <h2>More Stuff</h2>
+        <h2>Let Us Help You</h2>
         <p>
-            Duis augue lacus, pharetra at dapibus in, posuere quis tortor. Cras porttitor libero vel pretium faucibus. Curabitur eget tortor elit. Curabitur vulputate ut magna sed viverra. Ut eleifend ligula turpis. Integer eleifend aliquet scelerisque. Integer facilisis justo ac varius luctus. Suspendisse posuere semper felis at faucibus. Morbi magna magna, aliquet dictum purus non, dignissim fermentum nibh. Aenean sit amet nisi ut erat volutpat cursus in vitae ipsum. Integer tempus, libero vitae imperdiet vestibulum, massa purus porta turpis, finibus scelerisque enim felis at enim. Vivamus eu tincidunt justo. Vivamus finibus sit amet neque sed mattis. Vivamus scelerisque, dui id dignissim mattis, mauris justo efficitur quam, quis finibus turpis lectus nec dolor.
+            Have a question? We would love to help. Please call us anytime at our help desk 801-405-3356. 
         </p>
-    </div>
-    <div class="col-md-4">
-        <h2>Even More</h2>
-        <p>
-            Duis augue lacus, pharetra at dapibus in, posuere quis tortor. Cras porttitor libero vel pretium faucibus. Curabitur eget tortor elit. Curabitur vulputate ut magna sed viverra. Ut eleifend ligula turpis. Integer eleifend aliquet scelerisque. Integer facilisis justo ac varius luctus. Suspendisse posuere semper felis at faucibus. Morbi magna magna, aliquet dictum purus non, dignissim fermentum nibh. Aenean sit amet nisi ut erat volutpat cursus in vitae ipsum. Integer tempus, libero vitae imperdiet vestibulum, massa purus porta turpis, finibus scelerisque enim felis at enim. Vivamus eu tincidunt justo. Vivamus finibus sit amet neque sed mattis. Vivamus scelerisque, dui id dignissim mattis, mauris justo efficitur quam, quis finibus turpis lectus nec dolor.
-        </p>
+
+		<p>
+			Access our code at https://github.com/SCCapstone/TumorTaskforce
+		</p>
     </div>
 </div>
